# flutter_rust_message_channel

./: .gitignore  README.md  pubspec.yaml
android/: local.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
android/app/src/main/kotlin/com/example/flutter_rust_message_channe/: MainActivity.kt
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  service.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/: Podfile
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  rust_ex.podspec
rust/src/: channel.rs  lib.rs  obj.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
