[package]
name = "rust_example"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
simple_logger = "5.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
irondash_message_channel = { version = "0.8.0", features = ["derive"] }
irondash_run_loop = { version = "0.6.0" }
irondash_dart_ffi = "0.2.0"

# reqwest uses different options per platform

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "ios"))'.dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "native-tls",
] }

[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "native-tls-vendored",
] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"
